--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p>Since 1974, the Boldt Decision has been challenged by appeals but at each juncture, Boldt’s ruling has been upheld by the court. Not only were the events of the fish wars instrumental in influencing the outcome of the Boldt Decision, this brave indigenous resistance was a catalyst for further resistance which continues to the present day. Most recently, the Fish Wars Bridge – or as it has been renamed “Yabuk’ʷali” meaning “place of a fight”, was the gathering space for a protest of Tacoma’s proposed LNG plant. Indigenous resistance continues to fight for the restoration of land, the recognition and celebration of a people, as well as the responsible stewardship of natural resources.
             </p>
             <figure id="img-div">
-                <img id="image" src="Bridge.jpg" alt="Indians on bridge."/>
+                <img id="image" src="bridge.jpg" alt="Indians on bridge."/>
                 <figcaption id="img-caption">
                   
                 </figcaption>
